<resources>
    <string name="app_name">Money Manager</string>
    <string name="splash_img">splashImage</string>
    <string name="btn_singout">Sing out</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textview">Text</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="month_picker">&#60;Month&#62;</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="button_drawer">go to home</string>
    <string name="username">username</string>
    <string name="button_next">buttonNext</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="Click_Me">Click Me</string>
    <string name="get_month">Get Month</string>

    <string-array name="transaction">
        <item>Income</item>
        <item>Expenses</item>
    </string-array>
</resources>
